<resources>
    <string name="app_name" translatable="false">XTraqueur</string>

    <string name="pre_new_task_hint">Add a new task&#8230;</string>
    <string name="new_task_name">Name</string>
    <string name="new_task_fee">Fee</string>
    <string name="new_task_completions">Completions</string>
    <string name="new_task_color">Color</string>

    <string name="manage_completions">Manage</string>

    <string name="delete_task">Delete task</string>

    <string name="all_completions">All completions</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="go_back_to_all_tasks">Go back to all tasks</string>
    <string name="remove_completion_from_task">Remove completion from task</string>
    <string name="add_completion_to_task">Add completion to task</string>
    <string name="discard_changes_dialog_title">Discard changes?</string>
    <string name="discard_changes_dialog_message">Do you want to discard unsaved changes to this task?</string>
    <string name="discard_option">Discard</string>
    <string name="cancel_option">Cancel</string>
    <string name="already_in_use">That name is already in use!</string>
    <string name="collecting_tasks_data">Collecting tasks data</string>
    <string name="invalid_name">That name is not valid!</string>
    <string name="invalid_fee">That fee is not valid!</string>
    <string name="menu_icon_title_settings">Settings</string>
    <string name="newtask_fee_placeholder" translatable="false">10</string>
    <string name="settings_section_google_account">Google Account</string>
    <string name="sign_out">Sign out</string>
    <string name="sign_in">Sign in</string>
    <string name="delete_button">Delete</string>
    <string name="delete_task_confirmation">Delete this task?</string>
    <string name="delete_task_message">This action can not be undone. Do you really want to delete this task?</string>
    <string name="no_tasks_message1">You don\'t have any tasks.</string>
    <string name="no_tasks_message2">Click below to create one!</string>
    <string name="menu_icon_title_completions">Completions</string>
    <string name="settings_section_danger_zone">Danger Zone</string>
    <string name="delete_all_completions">Delete all completions</string>
    <string name="delete_all_tasks">Delete all tasks</string>
    <string name="delete_all_tasks_title">Delete all tasks?</string>
    <string name="delete_all_tasks_message">This action can not be undone. Do you really want to delete all your tasks?</string>
    <string name="delete_all_completions_title">Delete all completions?</string>
    <string name="delete_all_completions_message">This action can not be undone. Do you really want to delete all your completions?</string>
    <string name="save">Save</string>
    <string name="welcome_app_desc">Track your work with ease</string>
    <string name="no_tasks">No tasks</string>
    <string name="total_earnings">Total earnings</string>
    <string name="payment_history">Payment history</string>
    <string name="delete_completion">Delete completion</string>
    <string name="item_time">Time</string>
    <string name="icon_filter">Filter</string>
    <string name="selected">selected</string>
    <string name="cancel_selection">Cancel selection</string>
    <string name="register_payment">Register payment</string>
    <string name="select_completions">Select completions</string>
    <string name="select_all">Select all</string>
    <string name="deselect_all">Deselect all</string>
    <string name="new_payment_date">Date</string>
    <string name="new_payment_title">New payment</string>
    <string name="payments_timeline">Payments timeline</string>
    <string name="confirmation_dialog_register_payment">Register new payment?</string>
    <string name="confirmation_dialog_register_payment_msg">This action can not be undone. Do you really want to archive selected completions to a new payment?</string>
    <string name="confirmation_dialog_register_payment_positive">Register</string>
    <string name="menu_icon_title_timeline">Timeline</string>
    <string name="delete_payment">Delete payment</string>
    <string name="item_date">Date</string>
    <string name="delete_completion_confirmation_title">Delete completion?</string>
    <string name="delete_completion_confirmation_message">This action can not be undone. Do you really want to delete this completion?</string>
    <string name="delete_completions_confirmation_title">Delete completions?</string>
    <string name="delete_completions_confirmation_message">This action can not be undone. Do you really want to delete these completions?</string>
    <string name="delete_payment_confirmation_title">Delete payment?</string>
    <string name="delete_payment_confirmation_message">This action can not be undone. Do you really want to delete this payment?</string>
    <string name="selected_color">Selected color</string>
    <string name="selected_item">Selected</string>
    <string name="completions">completions</string>
    <string name="TEMPLATE_payment_value" translatable="false">250kr</string>
    <string name="TEMPLATE_item_title">Payment title</string>
    <string name="TEMPLATE_item_date">friday 4 may 2018 18:57</string>
    <string name="show_completions">Show completions</string>
    <string name="settings_section_resetting">Resetting</string>
    <string name="select_payments">Select payments</string>
    <string name="error_could_not_save_changes">Error: Could not save changes</string>
    <string name="error_could_not_delete_item">Error: Could not delete item</string>
    <string name="error_could_not_setup_data_directory">Error: Could not setup new data directory</string>
    <string name="error_could_not_create_new_task">Error: Could not create new task</string>
    <string name="changes_have_been_saved">Changes have been saved</string>
    <string name="other">Other</string>
    <string name="hint_task">Task</string>
    <string name="completion_of">Completion of</string>
    <string name="register_new_completion">Register new completion</string>
    <string name="register">Register</string>
    <string name="total_unpaid_earnings">Total unpaid earnings</string>
    <string name="TEMPLATE_earnings_title" translatable="false">kr 500,00</string>
    <string name="instant_completion">Instant completion</string>
    <string name="payment">Payment</string>
    <string name="welcome_page_next">NEXT</string>
    <string name="welcome_page_finish">SIGN IN</string>
    <string name="welcome_page_back">BACK</string>
    <string name="welcome_page_text_intro">You just made you life a tiny bit easier! You can now elegantly manage your chores with customized task types, payment registration and more.</string>
    <string name="welcome_page_title_intro">Welcome!</string>
    <string name="welcome_page_title_custom_tasks">Custom tasks</string>
    <string name="welcome_page_text_custom_tasks">By creating a custom <i>task</i>  you can specify a name, fee and color to sort all your completed chores. By doing this you can simply click the plus-sign whenever you complete this task.</string>
    <string name="welcome_page_text_instant_completions">To avoid using up to much space, less frequent chores can easily be registered as \"instant completions\". This is done by clicking the lightning-icon on the main screen.</string>
    <string name="welcome_page_title_instant_completions">Instant completions</string>
    <string name="welcome_page_title_google_account">Safe cloud storage</string>
    <string name="welcome_page_text_google_account">This app uses Google Account Sign-in to safely store your app data with Google Drive.</string>
    <string name="welcome_page_text_payments">Whenever you get paid for your hard work, you may archive the registered completions as a payment. This way you control which completions have been paid for or not.</string>
    <string name="welcome_page_title_payments">Registering payments</string>
    <string name="sign_in_with_google">Sign in with Google</string>
</resources>
