<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimaryWhite"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimaryWhite"
        app:navigationContentDescription="@string/go_back_to_all_tasks"
        app:navigationIcon="@drawable/ic_back_grey"
        app:titleTextColor="@color/colorPrimaryGrey"
        app:title="@string/total_earnings">

    </android.support.v7.widget.Toolbar>


    <android.support.constraint.ConstraintLayout
        android:id="@+id/total_earnings_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@drawable/primary_white_rounded"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp">

            <android.support.constraint.ConstraintLayout
                android:id="@+id/total_earnings_value_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                >

                <TextView
                    android:id="@+id/total_earnings_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="15sp"
                    android:text="@string/total_unpaid_earnings"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/total_earnings_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="@font/open_sans_bold"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimaryGrey"
                    android:textSize="50sp"
                    android:text="@string/TEMPLATE_earnings_title"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/total_earnings_title" />

            </android.support.constraint.ConstraintLayout>

            <Button
                android:id="@+id/button_total_earnings_new_payment"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="70dp"
                android:background="@drawable/accent_rounded_2dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/register_payment"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/total_earnings_value_container"
                tools:layout_editor_absoluteY="70dp" />

            <Button
                android:id="@+id/button_total_earnings_payments_timeline"
                android:layout_width="wrap_content"
                android:layout_height="36dp"
                android:layout_marginBottom="6dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/darker_rounded_2dp"
                android:paddingEnd="16dp"
                android:paddingStart="16dp"
                android:text="@string/payment_history"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button_total_earnings_new_payment"
                tools:layout_editor_absoluteY="70dp" />

        </android.support.constraint.ConstraintLayout>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>