<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryWhite">

    <LinearLayout
        android:id="@+id/completions_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimaryWhite"
            android:elevation="4dp"
            app:navigationContentDescription="@string/go_back_to_all_tasks"
            app:navigationIcon="@drawable/ic_back_grey">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    style="@style/TextAppearance.Widget.AppCompat.Toolbar.Title"
                    android:id="@+id/toolbar_custom_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|start"
                    android:text="@string/menu_icon_title_completions"
                    android:textColor="@color/colorPrimaryGrey" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:paddingStart="10dp"
                    android:layout_weight="1">

                    <LinearLayout
                        android:id="@+id/task_filter_field"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignParentEnd="true"
                        android:layout_marginBottom="7dp"
                        android:layout_marginEnd="12dp"
                        android:layout_marginStart="12dp"
                        android:layout_marginTop="7dp"
                        android:background="@drawable/white_rounded"
                        android:orientation="horizontal"
                        android:paddingEnd="12dp"
                        android:paddingStart="12dp">

                        <LinearLayout
                            android:id="@+id/task_filter_circle"
                            android:layout_width="22dp"
                            android:layout_height="22dp"
                            android:layout_gravity="center_vertical|start"
                            android:layout_marginEnd="10dp"
                            android:background="@drawable/circle"
                            android:orientation="horizontal" />

                        <TextView
                            android:id="@+id/task_filter_name"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical|end"
                            android:textColor="@color/colorPrimaryGrey"
                            android:ellipsize="marquee"
                            android:singleLine="true"
                            android:textSize="16sp" />

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>


        </android.support.v7.widget.Toolbar>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar_selection_mode"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorAccentDark"
            app:elevation="4dp"
            android:visibility="gone"
            app:navigationContentDescription="@string/cancel_selection"
            app:navigationIcon="@drawable/ic_clear">

        </android.support.v7.widget.Toolbar>

    </LinearLayout>

    <com.mzom.xtraqueur.TimelineRecycler
        android:id="@+id/completions_recycler"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layoutAnimation="@anim/layout_animation_fall_down"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/completions_toolbar" />

</android.support.constraint.ConstraintLayout>